[package]
name = "image-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = "0.23"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
aes = "0.8"
ctr = "0.9.2"
rand = "0.8"
base64 = "0.13"


