[package]
name = "image-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = "0.23"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
aes = "0.8"
ctr = "0.9.2"
rand = "0.8"
base64 = "0.13"
tokio = { version = "1", features = ["full"] }
ipfs-api = "0.17"
thiserror="1.0"
rs_merkle = "1.4"
md5 = "0.7.0"
sha2="0.10.8"
hex="0.4.3"
sha256 = "1.0.3"
miden-crypto = "=0.9.3"





